algo_ds/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:21:46 **** Build of configuration Debug for project array ****
make all 
Building file: ../src/array.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/array.d" -MT"src/array.o" -o "src/array.o" "../src/array.cpp"
Finished building: ../src/array.cpp
 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
../src/main.cpp: In function ‘int main()’:
../src/main.cpp:9:20: error: ‘accept_arr_ele’ was not declared in this scope
  accept_arr_ele(arr);
                    ^
../src/main.cpp:11:18: warning: the address of ‘int rec_array_sum(int*, int)’ will always evaluate as ‘true’ [-Waddress]
  cout<<"sum = "<<rec_array_sum<<endl;
                  ^
src/subdir.mk:21: recipe for target 'src/main.o' failed
make: *** [src/main.o] Error 1
18:21:51 **** Incremental Build of configuration Debug for project array ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
../src/main.cpp: In function ‘int main()’:
../src/main.cpp:9:20: error: ‘accept_arr_ele’ was not declared in this scope
  accept_arr_ele(arr);
                    ^
../src/main.cpp:11:18: warning: the address of ‘int rec_array_sum(int*, int)’ will always evaluate as ‘true’ [-Waddress]
  cout<<"sum = "<<rec_array_sum<<endl;
                  ^
src/subdir.mk:21: recipe for target 'src/main.o' failed
make: *** [src/main.o] Error 1
18:23:39 **** Incremental Build of configuration Debug for project array ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
../src/main.cpp: In function ‘int main()’:
../src/main.cpp:12:18: warning: the address of ‘int rec_array_sum(int*, int)’ will always evaluate as ‘true’ [-Waddress]
  cout<<"sum = "<<rec_array_sum<<endl;
                  ^
Finished building: ../src/main.cpp
 
Building target: array
Invoking: GCC C++ Linker
g++  -o "array"  ./src/array.o ./src/main.o   
Finished building target: array
 
18:24:10 **** Incremental Build of configuration Debug for project array ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: array
Invoking: GCC C++ Linker
g++  -o "array"  ./src/array.o ./src/main.o   
Finished building target: array
 
18:24:30 **** Incremental Build of configuration Debug for project array ****
make all 
make: Nothing to be done for 'all'.
18:24:40 **** Incremental Build of configuration Debug for project array ****
make all 
make: Nothing to be done for 'all'.
18:29:33 **** Incremental Build of configuration Debug for project array ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: array
Invoking: GCC C++ Linker
g++  -o "array"  ./src/array.o ./src/main.o   
Finished building target: array
 
18:30:39 **** Incremental Build of configuration Debug for project array ****
make all 
make: Nothing to be done for 'all'.
